Fix for scrollable image on IPhones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,6 +237,10 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     box-sizing: border-box;
+    /* Fix for scrollable image on IPhones */ 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
 }
 
 /* Reasons to choose us */
